# Projeto_de_sistemas

./: pom.xml
05_app_mvc_generics/: README.md  pyproject.toml
05_app_mvc_generics/src/: __initi__.py
ativida_fast_banco/: README.me  app.db  main.py  requirements.txt
ativida_fast_banco/controller/: endereco.py  pessoa.py
ativida_fast_banco/model/: dto.py
atividade_hero_lib/: requirements.txt  setup.py
atividade_lib_hero/: pyproject.toml
calculadora_Fat/: main.py
calculadora_Fat/controller/: operacao.py
calculadora_Fat/model/service/: calculadora.py
calculadoracerto/src/: Main.java
org/example/: Main.java  model.java
src/main/java/org/example/: controller.java  view.java
