[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-hero-2"  # nome que aparecerá no pip
version = "0.1.0"
description = "bliblioteca de atividade de ps."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "comunisca", email = "rafaeldeps15@gmail.com"}
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]

[tool.setuptools]
include-package-data = true

[project.urls]
Homepage = ""